Adding a second page, testing links

--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
 
 <body>
 
-    <h1>
-        Hello World! This is Lalo's Blog
-    </h1>
+    <p>
+        Hello, weary traveller.
+    </p>
+    <p>
+        This may not be the place You were looking for, but You may rest here before continuing on.
+        Here You will find curious, musings, and certainly madness.
+    </p>
+    <p>
+        Best of luck
+    </p>
+
+    <a href="post1.html">Post 1</a>
 
 </body>
 
